force-app/main/default/objects/Student__c/fields/Handicaped__c.field-meta.xml
<CustomField>
    <fullName>Handicaped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handicaped</label>
    <type>Checkbox</type>
</CustomField>