force-app/main/default/objects/Student__c/fields/Main_Dept__c.field-meta.xml
<CustomField>
    <fullName>Main_Dept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main_Dept</description>
    <inlineHelpText>Main_Dept</inlineHelpText>
    <label>Main Dept</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>