force-app/main/default/objects/Student__c/fields/Studage__c.field-meta.xml
<CustomField>
    <fullName>Studage__c</fullName>
    <label>Studage</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>