force-app/main/default/objects/Student__c/fields/Studname__c.field-meta.xml
<CustomField>
    <fullName>Studname__c</fullName>
    <description>Studname</description>
    <label>Studname</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>